<resources>
    <string name="app_name" translatable="false">Namaz Vaktim</string>
    <string name="dbVersion" translatable="false">1</string>
    <string name="dbName" translatable="false">database.encrypted</string>
    <string name="db2Name" translatable="false">database.db</string>
    <string name="website" translatable="false">https://sekmetech.net/</string>
    <!-- Preferences -->
    <string name="prefSetup" translatable="false">q</string>
    <string name="prefUpdate" translatable="false">w</string>
    <string name="prefLang" translatable="false">e</string>
    <string name="prefCityCount" translatable="false">r</string>
    <string name="prefAutostart" translatable="false">t</string>
    <string name="prefShowNotify" translatable="false">y</string>
    <string name="prefIcon" translatable="false">j</string>
    <string name="prefAlarmVibrate" translatable="false">u</string>
    <string name="prefAlarmSound" translatable="false">h</string>
    <!-- Preferences selected cities-->
    <string name="prefCountry" translatable="false">o</string>
    <string name="prefCountryID" translatable="false">p</string>
    <string name="prefCity" translatable="false">a</string>
    <string name="prefCityID" translatable="false">s</string>
    <string name="prefTown" translatable="false">d</string>
    <string name="prefTownID" translatable="false">f</string>
    <string name="prefAngle" translatable="false">g</string>
    <!-- Tab names -->
    <string name="tabVakit">Vakit</string>
    <string name="tabKible">Kıble</string>
    <string name="tabImsakiye">İmsakiye</string>
    <string name="tabTakvim">Takvim</string>
    <string name="tabKitaplik">Kitaplık</string>
    <string name="tabOnemliGun">Önemli Günler</string>
    <string name="tabAyarlar">Ayarlar</string>
    <!-- vakitler -->
    <string name="vakit_none" translatable="false">00:00</string>
    <string name="vakit_imsak">İmsak</string>
    <string name="vakit_kible">Kıble Saati</string>
    <string name="vakit_gunes">Güneş</string>
    <string name="vakit_ogle">Öğle</string>
    <string name="vakit_ikindi">İkindi</string>
    <string name="vakit_aksam">Akşam</string>
    <string name="vakit_yatsi">Yatsı</string>
    <string name="vakit_teheccud">Teheccüd</string>
    <string name="vakit_duha">Duha</string>
    <string name="vakit_israk">İşrak</string>
    <string name="vakit_evvabin">Evvabin</string>
    <string name="vakit_remaining">Kalan Zamanınız</string>
    <string name="vakit_left">Vaktin Çıkmasına</string>
    <string name="kibleAngle">Kıble Açısı</string>
    <string name="sifir" translatable="false">0</string>
    <string name="derece" translatable="false"> °</string>
    <string name="compassInfo">Cihazınızı manyetik alanlardan uzak ve yere paralel bir şekilde tutunuz.</string>
    <!-- Setup screen -->
    <string name="title_activity_setup">Kurulum Sihirbazı</string>
    <string name="Updating">Güncelleniyor…</string>
    <string name="Updated">Vakitler güncellendi</string>
    <string name="link1" translatable="false">http://diyanet-api.herokuapp.com/namaz_</string>
    <string name="link2" translatable="false">http://eardic.com/ezan</string>
    <string name="get" translatable="false">GET</string>
    <string name="utf8" translatable="false">UTF-8</string>
    <string name="Country">Ülke</string>
    <string name="City">Şehir</string>
    <string name="Town">İlçe</string>
    <string name="next">İleri</string>
    <string name="save">Kaydet</string>
    <string name="lang">Dil</string>
    <!-- Settings -->
    <string name="sett_Genel">Genel</string>
    <string name="sett_StartWithPhone">Telefon açıldığında uygulama başlasın</string>
    <string name="sett_ChangeLang">Dili Değiştir</string>
    <string name="sett_ChangeCity">Şehri Değiştir</string>
    <string name="sett_Notification">Bildirimler</string>
    <string name="sett_ShowNotification">Bildirim Alanında Vakitleri Göster</string>
    <string name="sett_TransparentNotifyIcon">Bildirim Simgesini Göster</string>
    <string name="sett_About">Hakkında</string>
    <string name="sett_OnWeb">Web Sitesi</string>
    <string name="sett_Share">Paylaş</string>
    <string name="sett_SendEmail">Geliştiriciye eposta gönder</string>
    <string name="sett_Sounds">Sesler</string>
    <string name="sett_Saved">Ayarlar Kaydedildi</string>
    <string name="sett_ringtone">Ses Çal</string>
    <string name="sett_vibrate">Titreşim</string>
    <string name="changeLang">Dili Değiştir</string>
    <string name="changeCity">Şehri Değiştir</string>
    <string name="sett_Support">Destek</string>
    <string name="sett_ContactUs">Bize Ulaşın</string>
    <!-- varsayılan değerler -->
    <string name="Turkiye" translatable="false">TURKIYE</string>
    <string name="Istanbul" translatable="false">İSTANBUL</string>
    <string name="defaultUlkeID" translatable="false">2</string>
    <string name="defaultSehirID" translatable="false">539</string>
    <string name="defaultIlceID" translatable="false">9541</string>
    <string name="defaultLocale" translatable="false">TR</string>
    <string name="dateFormat" translatable="false">"dd.MM.yyyy"</string>
    <string name="datetimeFormat" translatable="false">"dd.MM.yyyy HH:mm"</string>
    <string name="timeFormat" translatable="false">"HH:mm"</string>
    <!-- arrays -->
    <string-array name="SehirliUlkeler" translatable="false">
        <item>TURKIYE</item>
        <item>ABD</item>
        <item>KANADA</item>
    </string-array>
    <string-array name="Diller" translatable="false">
        <item>Türkçe</item>
        <item>English</item>
    </string-array>
    <string-array name="DilKodlari" translatable="false">
        <item>TR</item>
        <item>EN</item>
    </string-array>
    <!-- SQL -->
    <string name="sqlSelect" translatable="false">SELECT</string>
    <string name="sqlFrom" translatable="false">FROM</string>
    <string name="sqlWhere" translatable="false">WHERE</string>
    <string name="sqlInnerJoin" translatable="false">INNER JOIN</string>
    <string name="sqlOn" translatable="false">ON</string>
    <string name="sqlAnd" translatable="false">AND</string>
    <string name="sqlOrderBy" translatable="false">ORDER BY</string>
    <!-- Others -->
    <string name="updateLink" translatable="false">vakti/%s/Aylik</string>
    <string name="Flag" translatable="false">Flag</string>
    <string name="Logo" translatable="false">logo</string>
    <string name="minus" translatable="false">-</string>
    <string name="setBackgroundColor" translatable="false">setBackgroundColor</string>
    <string name="nokta" translatable="false">.</string>
    <string name="sqlEquals" translatable="false">=</string>
    <string name="multpily" translatable="false">*</string>
    <string name="ss" translatable="false">%s%s</string>
    <string name="sd" translatable="false">%s.%d</string>
    <!-- errors -->
    <string name="errorSetup">Kurulum hatası</string>
    <string name="errorConnection">İnternete bağlanamadı</string>
</resources>
