<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Tüm hakları saklıdır.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/prefAutostart"
        android:summary="@string/sett_StartWithPhone"
        android:title="@string/sett_StartWithPhone" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/prefShowNotify"
        android:summary="@string/sett_ShowNotification"
        android:title="@string/sett_ShowNotification" />

    <ListPreference
        android:entries="@array/Diller"
        android:entryValues="@array/DilKodlari"
        android:key="@string/prefLang"
        android:summary="@string/lang"
        android:title="@string/lang" />

</PreferenceScreen>