<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Tüm hakları saklıdır.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/onbes"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity">
    <!--tools:showIn="@layout/activity_settings">-->


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblOne"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sett_Genel" />

            <Switch
                android:id="@+id/swAutoStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:checked="true"
                android:text="@string/sett_StartWithPhone" />

            <Button
                android:id="@+id/btnChangeLang"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:text="@string/sett_ChangeLang" />

            <Button
                android:id="@+id/btnChangeCity"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:text="@string/sett_ChangeCity" />

            <TextView
                android:id="@+id/lblTwo"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/yirmi"
                android:text="@string/sett_Notification" />

            <Switch
                android:id="@+id/swShowNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:checked="true"
                android:text="@string/sett_ShowNotification" />

            <Switch
                android:id="@+id/swTransparentNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:text="@string/sett_TransparentNotifyIcon" />

            <TextView
                android:id="@+id/lblThree"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/yirmi"
                android:text="@string/sett_Sounds" />

            <TextView
                android:id="@+id/lblFour"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/yirmi"
                android:text="@string/sett_About"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:text="@string/sett_About"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:text="@string/sett_OnWeb"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/yirmibes"
                android:text="@string/sett_SendEmail"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
