<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.huseyinsekmenoglu.fragments.tKible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/lblKible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/vakit_kible"
            android:textSize="@dimen/yirmibesT" />

        <TextView
            android:id="@+id/txtKible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/vakit_none"
            android:textSize="@dimen/yirmibesT" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgKible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:contentDescription="@string/tabKible"
        android:src="@drawable/pusula" />

</FrameLayout>
