<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.sekmetech.fragments.CompassFragmant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/lblKible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="@dimen/bes"
                android:text="@string/vakit_kible"
                android:textSize="@dimen/yirmibesT" />

            <TextView
                android:id="@+id/txtKible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="@dimen/bes"
                android:text="@string/vakit_none"
                android:textSize="@dimen/yirmibesT" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/lblAngle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="@dimen/bes"
                android:text="@string/kibleAngle"
                android:textSize="@dimen/yirmibesT" />

            <TextView
                android:id="@+id/txtAngle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="@dimen/bes"
                android:text="@string/sifir"
                android:textSize="@dimen/yirmibesT" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgKible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:contentDescription="@string/tabKible"
            android:src="@drawable/pusula" />
    </LinearLayout>

</FrameLayout>
